--- a/teaching/s2025_dg1.html
+++ b/teaching/s2025_dg1.html
@@ -21,7 +21,7 @@
 <!-- 
 2024-06-24: Letter grades have been submitted. Enjoy your summer break.<br>   
 2024-06-13: Please respond by June 19th noon if you want to see your graded final exam papers or if you want to receive the result by email. Please read the email announcement.<br>    
-2024-05-27: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>   
+
 2024-05-27: Review report of the 1st course evaluation survey will not be posted because there is no items to address.<br>  
 2024-05-15: <b>Announcements</b> The class will go online for today's 14:00 class. Watch the lecture through eCampus by May 29th.<br>  
 2024-05-15: Those who did not receive handouts should email me to get a copy.<br>    
@@ -37,6 +37,10 @@
 
 
    -->
+2024-06-05: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>      
+2025-06-05: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
+2025-06-05: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
+2025-06-05: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>     
 2025-04-10: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>        
 2025-04-10: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>       
 2025-04-03: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>   
@@ -71,10 +75,6 @@ Problems from O'Neill, Elementary Differential Geometry, p.106 Exercise #2, 7, 8
 Problems from O'Neill, Elementary Differential Geometry, p.110 Exercise #2, 4<br>
 Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><br>
 
-   
-  <!-- 
-
-
 <b>Homework  #6</b> 7 problems.<br>
 Problems from Handout 2.<br><br> 
 
@@ -85,6 +85,11 @@ Problems from Handout 3.<br><br>
 <b>Homework  #8</b> 10 problems.<br>  
 Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 29 <a href="s2022_dg1/hw8no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32, 33.<br>
 Problems from Chapter 8 Part 2: #17, 19(a), 28, 30, 34, 38.<br><br> 
+
+   
+  <!-- 
+
+
   -->
 
 <h2><p>Exam Schedules</p></h2>
@@ -93,15 +98,17 @@ Midterm exam: <FONT COLOR="#C40062">22 April (Tuesday) 14:00--15:40</FONT> in-cl
 - Total 8 questions.There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br><br>  
 The average was 43.65. The maximum score achieved by a student was 94.<br>
-   <!--
 
-   
- Final Exam: <FONT COLOR="#C40062">14 June (Friday) 10:00--11:40</FONT> in-class. <br>
+  Final Exam: <FONT COLOR="#C40062">10 June (Tuesday) 14:00--15:40</FONT> in-class. <br>
 - Coverage: Everything covered in this course including all homework problems.<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-The average was 52.11. The maximum score achieved by a student was 94.<br><br> 
 <br>  
+
+   
+   <!--
+The average was 52.11. The maximum score achieved by a student was 94.<br><br> 
+   
   -->
  
 
