--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <h2><p>About me</p></h2>
 I am an Associate Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a>, <a href=https://www.cbnu.ac.kr/site/english/main.do>Chungbuk National University</a>.<br><br>
+<!--  I am an Associate Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a> and the Director of the <a href=https://oira.chungbuk.ac.kr/>Office of Educational Innovation</a>, <a href=https://www.cbnu.ac.kr/site/english/main.do>Chungbuk National University</a>. I also serve as a Chairperson of the <a href=https://soc.chungbuk.ac.kr/>Department of Art and Design</a>. 
+  
+  <br><br> -->
 
   
   
@@ -228,7 +231,7 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 <!--
 <a href="4214-06/4214-06.html">4214-06</a><br><br>-->
 
-Last Updated: 19 March 2025
+Last Updated: 01 September 2025
 
 </font>
 </body>
