--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 
 
 <h2><p>About me</p></h2>
-I am an Associate Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a>, <a href=https://www.cbnu.ac.kr/site/english/main.do>Chungbuk National University</a>.<br><br>
-<!--  I am an Associate Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a> and the Director of the <a href=https://oira.chungbuk.ac.kr/>Office of Educational Innovation</a>, <a href=https://www.cbnu.ac.kr/site/english/main.do>Chungbuk National University</a>. I also serve as a Chairperson of the <a href=https://soc.chungbuk.ac.kr/>Department of Art and Design</a>. 
-  
-  <br><br> -->
+I am an Associate Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a> and the Director of the <a href=https://oira.chungbuk.ac.kr/>Office of Educational Innovation</a>, <a href=https://www.cbnu.ac.kr/english/index.do>Chungbuk National University</a>. I also serve as a Chairperson of the <a href=https://soc.chungbuk.ac.kr/>Department of Art and Design</a> and the Director of the <a href=https://www.chec.or.kr/>Chungcheong Higher Education Compact (CHEC)</a>.<br><br>
+<!--   <br><br> -->
 
   
   
@@ -236,3 +234,4 @@ Last Updated: 01 September 2025
 </font>
 </body>
 </html>
+
