--- a/teaching/pastcourses.html
+++ b/teaching/pastcourses.html
@@ -13,7 +13,9 @@
   <dt><b>Chungbuk National University</b></dt>
 
 
-  
+
+
+  <dd>Spring 2025: <a href="teaching/s2025_dg1.html">Differential Geometry I</a>, <a href="teaching/s2025_geom1.html">Geometry for teachers</a>, <a href="teaching/s2025_introgeom.html">Introduction to Geometry</a>, <a href="teaching/s2025_calc1.html">Calculus I</a></dd>  
   <dd>Fall 2024: <a href="../teaching/f2024_srp2.html">Special Research Project II</a> (Graduate Course), <a href="../teaching/f2024_tig1.html">Topics in Geometry I</a> (Graduate Course), <a href="../teaching/f2024_ge.html">Geometry and education</a>, <a href="../teaching/f2024_dg2.html">Differential Geometry II</a>, </dd>      
   <dd>Spring 2024: <a href="../teaching/s2024_srp1.html">Special Research Project I</a> (Graduate Course), <a href="../teaching/s2024_top1.html">General Topology I</a>, <a href="../teaching/s2024_dg1.html">Differential Geometry I</a>, <a href="../teaching/s2024_geom1.html">Geometry for teachers</a></dd> 
   <dd>Fall 2023: <a href="../teaching/f2023_dg2.html">Differential Geometry II</a>, <a href="../teaching/f2023_calc2.html">Calculus II</a></dd>      
@@ -47,3 +49,4 @@
 <br><br><br><br>
 </body>
 </html>
+
