--- a/index.html
+++ b/index.html
@@ -81,15 +81,21 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 
 <h2><p>Teaching</p></h2>
 <dl>
-<dd><a href="teaching/s2025_dg1.html">Differential Geometry I</a></dd>
-<dd><a href="teaching/s2025_geom1.html">Geometry for teachers</a></dd>
-<dd><a href="teaching/s2025_introgeom.html">Introduction to Geometry</a></dd>
-<dd><a href="teaching/s2025_calc1.html">Calculus I</a></dd>  
+<dd><a href="teaching/f2025_dg2.html">Differential Geometry II</a></dd>
 </dl>
 <ul>
   <li><a href="teaching/pastcourses.html">Past courses</a></li>
 </ul>
 
+<h2><p>2025 Summer: Invariants of conics and the classification theorem</p></h2>
+<dl>
+<dd><a href="teaching/careerpathways/2025summer1.pdf">Notes from Lecture 1</a></dd>
+<dd><a href="teaching/careerpathways/2025summer2.pdf">Notes from Lecture 2</a></dd>
+<dd><a href="teaching/careerpathways/2025summer3.pdf">Notes from Lecture 3</a></dd>
+<dd><a href="teaching/careerpathways/2025summer4.pdf">Notes from Lecture 4</a></dd>
+</dl>
+
+  
 
 <!--
 
@@ -229,9 +235,10 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 <!--
 <a href="4214-06/4214-06.html">4214-06</a><br><br>-->
 
-Last Updated: 01 September 2025
+Last Updated: 01 August 2025
 
 </font>
 </body>
 </html>
+
 
