--- a/teaching/s2025_calc1.html
+++ b/teaching/s2025_calc1.html
@@ -39,6 +39,7 @@
 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br
   -->
+2025-06-24: Letter grades have been submitted. Enjoy your summer break.<br>  
 2025-06-10: <FONT color="#FF00FF"><b>The final exam announcement</b></FONT> The detail has been posted below.<br>   
 2025-05-21: <FONT COLOR="purple">Quiz II</FONT> will cover Chapters 5 to 6.<br>   
 2025-04-28: <FONT color="#FF00FF"><b>The midterm exam announcement</b></FONT> Mathematics Department has notified that each examinee has to present one's ID card. Please bring your ID card as you did in Quiz I. <br>  
@@ -141,7 +142,7 @@ Final exam: <FONT COLOR="#C40062">17 June (Tuesday), 19:00--20:00.</FONT> Locati
 - Coverage: Chapters 5 to 8.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.
 - You must present your valid ID card during the exam. The same ID card policies apply as in your Quizzes I, II. If you don't present a valid ID card, you will be asked to leave the classroom and your exam score will be zero.<br>  
-<br>
+The average was 31.70. The maximum score achieved by a student was 80.<br><br>
  
   
   
@@ -159,7 +160,7 @@ The 2nd midterm exam: <FONT COLOR="#C40062">02 May (Tuesday), 15:00--15:50.</FON
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
 - Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-The average was 49.42. The maximum score achieved by a student was 100.<br><br>
+
 
   
 The 3rd midterm exam: <FONT COLOR="#C40062">23 May (Tuesday), 15:00--15:50.</FONT> In-class.<br>
