--- a/teaching/s2025_geom1.html
+++ b/teaching/s2025_geom1.html
@@ -36,6 +36,7 @@
 
 2024-04-10: <b>Announcements</b> The class will go online for today's 14:00 class. Watch the lecture through eCampus by April 24th.<br>  
  --> 
+2025-06-24: Letter grades have been submitted. Enjoy your summer break.<br>  
 2025-06-05: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br> 
 2025-06-05: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>  
 2025-06-05: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
@@ -133,13 +134,11 @@ The midterm exam: <FONT COLOR="#C40062">24 April (Thursday) 10:00--11:40</FONT> 
  - Coverage: Everything we covered in this course by June 11th including all homework problems.<br>
 - Total 6 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-
- <br> 
+The average was 38.22. The maximum score achieved by a student was 83.<br><br> 
 
  
  <!--
- The average was 42.79. The maximum score achieved by a student was 100.<br> 
- 
+  
 
     
 -->
