--- a/teaching/s2025_dg1.html
+++ b/teaching/s2025_dg1.html
@@ -37,7 +37,8 @@
 
 
    -->
-2024-06-05: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>      
+2025-06-24: Letter grades have been submitted. Enjoy your summer break.<br>      
+2025-06-05: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>      
 2025-06-05: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
 2025-06-05: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
 2025-06-05: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>     
@@ -103,11 +104,11 @@ The average was 43.65. The maximum score achieved by a student was 94.<br>
 - Coverage: Everything covered in this course including all homework problems.<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-<br>  
+The average was 49.80. The maximum score achieved by a student was 92.<br><br>
 
    
    <!--
-The average was 52.11. The maximum score achieved by a student was 94.<br><br> 
+ 
    
   -->
  
