--- a/teaching/s2025_introgeom.html
+++ b/teaching/s2025_introgeom.html
@@ -40,10 +40,11 @@
 2023-03-23: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2023-03-16: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
 -->
+2025-06-24: Letter grades have been submitted. Enjoy your summer break.<br>   
 2025-06-05: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The coverage has been updated. See below.<br>     
 2025-05-29: <FONT COLOR="red">Homework #12</FONT> has been posted below.<br>
- 2025-05-22: <FONT COLOR="red">Homework #11</FONT> has been posted below.<br>
- 2025-05-15: <FONT COLOR="red">Homework #10</FONT> has been posted below.<br>
+2025-05-22: <FONT COLOR="red">Homework #11</FONT> has been posted below.<br>
+2025-05-15: <FONT COLOR="red">Homework #10</FONT> has been posted below.<br>
 2025-05-07: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>   
 2025-05-01: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
 2025-04-17: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
@@ -119,11 +120,11 @@ Midterm Exam: <FONT COLOR="#C40062">24 April (Thursday) 13:00--14:40</FONT> in-c
 - Coverage: Everything we covered in this course.<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br> 
-<br> 
+The average was 60.12. The maximum score achieved by a student was 78.95.<br><br> 
+ 
  
  <!--
 
- The average was 61.42. The maximum score achieved by a student was 100.<br><br> 
 
 
 
