--- a/teaching/f2025_dg2.html
+++ b/teaching/f2025_dg2.html
@@ -5,8 +5,8 @@
 <font face="Times New Roman">
 <body>
 <h1><p align="center">Differential Geometry II</p></h1>
-<h3><p align="center">Course 7412006 Section 01, Fall 2024</p></h3>
-<h3><p align="center">Wednesdays 14:00 - 14:50, Thursdays 10:00 - 11:50, Room: E1-1 #136</p></h3>
+<h3><p align="center">Course 7412006 Section 01, Fall 2025</p></h3>
+<h3><p align="center">Wednesdays 14:00 - 15:50, Thursdays 15:00 - 15:50, Room: E1-1 #136</p></h3>
 <h3><p align="center">Chungbuk National University</p></h3>
 <br>
 
@@ -14,8 +14,8 @@
 <!-- FONT SIZE SPECIFICATION-->
 <font size="4" >
 <b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
-<b>Office Hours:</b> Wednesdays 15:00--15:50 at E1-1 #110 or by appointment.<br> 
-<b>Syllabus:</b>  <a href="f2024_dg2/courseoutline_updated.pdf" title="Open Course Outline">PDF</a> (updated)<br>
+<b>Office Hours:</b> Thursdays 14:00--14:50 at E1-1 #110 or by appointment.<br> 
+<b>Syllabus:</b>  <a href="f2025_dg2/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
 
 
 <h2><p>Announcements</p></h2>
@@ -50,7 +50,7 @@ Problems from Chapter 9 Part 1: #1, 2, 4, 6, 33, 34, 35, 37, 38, 40.<br>
 Problems from Chapter 9 Part 2: #7, 9, 12, 41, 42, 43.<br>  
   <br> 
 
-<b>Homework  #2</b> 14 problems.<br>  
+<b>Homework  #2</b> 9 problems.<br>  
 Problems from the National Exam: <a href="f2025_dg2/handout1.pdf" title="Selected problems from the national exam">Handout 1</a>.<br><br>  
   
 <b>Homework  #3</b> 12 problems.<br>  
@@ -64,7 +64,7 @@ Problems from Chapter 11: #8, 10, 30, 32, 33, 54, 55.<br><br>
 <b>Homework  #5</b> 11 problems.<br>
 Problems from the National Exam: <a href="f2025_dg2/handout2.pdf" title="Selected problems from the national exam">Handout 2</a>.<br><br>    
 
-<b>Homework  #6</b> 3 problems.<br>
+<b>Homework  #6</b> 2 problems.<br>
 Problems from the National Exam: <a href="f2025_dg2/handout3.pdf" title="Selected problems from the national exam">Handout 3</a>.<br><br>    
   
   
